# Wealth-101

./: ALTERNATIVE_DEPLOYMENT.md  ALTERNATIVE_PUSH_METHODS.md  CUSTOM_DOMAIN_DEPLOYMENT.md  DEPLOYMENT.md  DEPLOYMENT_FIX.md  DEPLOYMENT_STATUS.md  DOWNLOAD_INSTRUCTIONS.md  Dockerfile  FASTAPI_DEPLOYMENT_INSTRUCTIONS.md  FILES_TO_UPLOAD.md  GITHUB_SETUP.md  HOW_TO_DOWNLOAD.md  PARTNER_PITCH_DECK.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOYMENT_CHECKLIST.md  VERSION.md  WHITE_LABEL_BUSINESS_PLAN.md  app.py  docker-compose.yml  index.py  main.py  pyproject.toml  render.yaml  replit.md  vercel.json
backend/: .env  requirements.txt
backend/app/: main.py  models.py
backend/app/api/: admin.py  analytics.py  assets.py  auth.py  expenses.py  gamification.py  income.py  insurance.py  milestones.py  profile.py  reports.py  services.py  users.py  wealth.py  whitelabel.py
backend/app/middleware/: security.py
backend/app/services/: __init__.py  analytics.py  chart_data.py  health_calculator.py  marketing.py  modern_pdf_generator.py  pdf_generator.py  performance.py  professional_pdf_generator.py  stunning_pdf_generator.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AssetPieChart.jsx  BadgeSystem.jsx  DailyGoals.jsx  FinancialFreedomScore.jsx  Layout.jsx  LayoutNew.jsx  StreakWidget.jsx  WealthChart.jsx  WealthProgress.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: Achievements.jsx  Dashboard.jsx  DashboardNew.jsx  Dashboard_backup.jsx  Income.jsx  (+7 more)
